# error-chain

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  index.html  search-index.js
backtrace/: fn.resolve.html  fn.trace.html  index.html  struct.Backtrace.html  struct.BacktraceFrame.html  struct.BacktraceSymbol.html  struct.Frame.html  struct.Symbol.html  struct.SymbolName.html
backtrace_sys/: enum.backtrace_state.html  fn.backtrace_create_state.html  fn.backtrace_pcinfo.html  fn.backtrace_syminfo.html  index.html  type.backtrace_error_callback.html  type.backtrace_full_callback.html  type.backtrace_syminfo_callback.html
cfg_if/: index.html  macro.cfg_if.html
error_chain/: index.html  macro.bail.html  macro.ensure.html  macro.error_chain.html  macro.error_chain_processed.html  macro.quick_error.html  macro.quick_main.html  sidebar-items.js  struct.Backtrace.html  struct.DisplayChain.html  struct.Iter.html  trait.ChainedError.html  trait.ExitCode.html
error_chain/example_generated/: enum.ErrorKind.html  index.html  struct.Error.html  trait.ResultExt.html  type.Result.html
error_chain/example_generated/inner/: enum.ErrorKind.html  index.html  struct.Error.html  trait.ResultExt.html  type.Result.html
ex/: quickstart.rs
examples/: all.rs  caused.rs  chain_err.rs  doc.rs  inference.rs  quickstart.rs  size.rs
libc/: fn.accept.html  fn.access.html  fn.alarm.html  fn.cfgetispeed.html  fn.cfgetospeed.html  fn.cfmakeraw.html  fn.cfsetispeed.html  fn.cfsetospeed.html  fn.cfsetspeed.html  fn.chdir.html  fn.chmod.html  fn.chown.html  fn.chroot.html  fn.close.html  fn.closedir.html  fn.closelog.html  fn.connect.html  fn.creat.html  fn.daemon.html  fn.dladdr.html  fn.dlclose.html  fn.dlerror.html  fn.dlopen.html  fn.dlsym.html  fn.dup.html  fn.dup2.html  fn.endpwent.html  fn.execl.html  fn.execle.html  fn.execlp.html  fn.execv.html  fn.execve.html  fn.execvp.html  fn.faccessat.html  fn.fchdir.html  fn.fchmod.html  fn.fchmodat.html  fn.fchown.html  fn.fchownat.html  fn.fcntl.html  (+223 more)
rustc_demangle/: fn.demangle.html  fn.try_demangle.html  index.html  struct.Demangle.html  struct.TryDemangleError.html
src/: backtrace.rs  error.rs  error_chain.rs  example_generated.rs  impl_error_chain_kind.rs  lib.rs  log_ext.rs  quick_error.rs  quick_main.rs  trait_alias.rs  types.rs
src/backtrace/: capture.rs.html  dylib.rs.html  lib.rs.html
src/backtrace_sys/: lib.rs.html
src/cfg_if/: lib.rs.html
src/error_chain/: error_chain.rs.html  example_generated.rs.html  lib.rs.html  quick_error.rs.html  quick_main.rs.html
src/libc/: dox.rs.html  lib.rs.html  macros.rs.html
src/rustc_demangle/: lib.rs.html
test-doc/: Cargo.toml
test-doc/src/: lib.rs
tests/: log_ext.rs  quick_main.rs  tests.rs
(+69 files in other folders)
