[package]
name = "error-chain"
version = "0.12.1" # remember to update html_root_url
authors = [ "Brian Anderson <banderson@mozilla.com>",
            "Paul Colomiets <paul@colomiets.name>",
            "Colin Kiegel <kiegel@gmx.de>",
            "Yamakaky <yamakaky@yamaworld.fr>"]
description = "Yet another error boilerplate library."
keywords = ["error"]
categories = ["rust-patterns"]

documentation = "https://docs.rs/error-chain"
repository = "https://github.com/rust-lang-nursery/error-chain"
readme = "README.md"

license = "MIT/Apache-2.0"

[features]
default = ["backtrace", "example_generated"]
example_generated = []

[dependencies]
# https://github.com/rust-lang/backtrace-rs/commit/17db3f34b1e674b2a653f4a4399750e25f657eea in backtrace-rs 0.3.36
# breaks 1.31.0 because of issues with "mod print"
backtrace = { version = "0.3.3,<0.3.36", optional = true }
# For later rust try! compatibility
try = "1.0"

[build-dependencies]
version_check = "0.9"
