[package]
name = "error-chain"
version = "0.12.2" # remember to update html_root_url
authors = [ "Brian Anderson <banderson@mozilla.com>",
            "Paul Colomiets <paul@colomiets.name>",
            "Colin Kiegel <kiegel@gmx.de>",
            "Yamakaky <yamakaky@yamaworld.fr>",
            "Andrew Gauger <andygauge@gmail.com>"]
description = "Yet another error boilerplate library."
keywords = ["error"]
categories = ["rust-patterns"]

documentation = "https://docs.rs/error-chain"
repository = "https://github.com/rust-lang-nursery/error-chain"
readme = "README.md"

license = "MIT/Apache-2.0"

[features]
default = ["backtrace", "example_generated"]
example_generated = []

[dependencies]
backtrace = { version = "0.3.3", optional = true }

[build-dependencies]
version_check = "0.9"
